[gd_scene load_steps=5 format=3 uid="uid://dqkmyvvmo4itf"]

[ext_resource type="PackedScene" uid="uid://cswyylwaj4a33" path="res://Scene/Actor/Actor.tscn" id="1_m5txu"]
[ext_resource type="Script" path="res://Scene/Actor/Character/Character.gd" id="2_n5pxn"]
[ext_resource type="Script" path="res://Scene/Actor/Character/AttackPrincipalState.gd" id="3_g40v1"]
[ext_resource type="Script" path="res://StateMachine/State.gd" id="3_kshho"]

[node name="Character" instance=ExtResource("1_m5txu")]
script = ExtResource("2_n5pxn")
attack_principal = null
attack_secondaire = null
attack_special1 = null
attack_special2 = null

[node name="AttackPrincipal" type="Node" parent="StateMachine" index="4"]
script = ExtResource("3_g40v1")

[node name="AttackSecondaire" type="Node" parent="StateMachine" index="5"]
script = ExtResource("3_kshho")

[node name="AttackSpecial1" type="Node" parent="StateMachine" index="6"]
script = ExtResource("3_kshho")

[node name="AttackSpecial2" type="Node" parent="StateMachine" index="7"]
script = ExtResource("3_kshho")

[node name="Esquive" type="Node" parent="StateMachine" index="8"]
script = ExtResource("3_kshho")

[node name="Camera2D" type="Camera2D" parent="." index="4"]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
metadata/_edit_lock_ = true
